infra/k8s/client-depl.yaml
#Going to create a deployment for the client service
#This handles multiple replicas of the client service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl #Name of the deployment
spec:
  replicas: 1 #Number of replicas of the client service pods

  #selector is used to select the pods that are managed by this deployment
  #It tells find the pods with the label app: client and manage them

  selector:
    matchLabels:
      app: client #Label to match the pods with the deployment
  
  #Specifis the pod template that will be used to create the pods
  #Applies configurations to the pods created by this deployment
  template:
    metadata:
      labels:
        app: client  #Label to be applied to the pods

    #Includes the information about the container to be used in the pod
    spec: 
      containers:
        - name: client #Name of the container
          image: dulina786/client:latest #Image to be used for the container
                 #dulina786/client also fetch the latest image from docker hub
---
#Going to create a Cluster IP service for the clientmicroservice
#This service will be used to access the client service from inside the cluster
#This service will be used to access the client service from other microservices
apiVersion: v1
kind: Service
metadata:
  name: client-srv #Name of the service
spec:
  selector:
    app: client #Label to match the pods with the service
  type: ClusterIP #Type of the service(Default type if not specified)
  ports:
    - name: client #Name of the port
      protocol: TCP #Protocol to be used for the service
      port: 3000 #This is the port of the service
      targetPort: 3000 #This is the port on the pod that the ClusterIP service will forward traffic to
      #3000 is the port on which the client service is running
      #Incoming traffic to this port will be forwarded to the client service
