infra/k8s/moderation-depl.yaml
#Going to create a deployment for the moderation service
#This handles multiple replicas of the moderation service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl #Name of the deployment
spec:
  replicas: 1 #Number of replicas of the moderation service pods

  #selector is used to select the pods that are managed by this deployment
  #It tells find the pods with the label app: moderation and manage them

  selector:
    matchLabels:
      app: moderation #Label to match the pods with the deployment
  
  #Specifis the pod template that will be used to create the pods
  #Applies configurations to the pods created by this deployment
  template:
    metadata:
      labels:
        app: moderation #Label to be applied to the pods

    #Includes the information about the container to be used in the pod
    spec: 
      containers:
        - name: moderation #Name of the container
          image: dulina786/moderation:latest #Image to be used for the container
                 #dulina786/moderation also fetch the latest image from docker hub
---
#Going to create a Cluster IP service for the moderationmicroservice
#This service will be used to access the moderation service from inside the cluster
#This service will be used to access the moderation service from other microservices
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv #Name of the service
spec:
  selector:
    app: moderation #Label to match the pods with the service
  type: ClusterIP #Type of the service(Default type if not specified)
  ports:
    - name: moderation #Name of the port
      protocol: TCP #Protocol to be used for the service
      port: 4003 #This is the port of the service
      targetPort: 4003 #This is the port on the pod that the ClusterIP service will forward traffic to
      #4003 is the port on which the moderation service is running
      #Incoming traffic to this port will be forwarded to the moderation service
