infra/k8s/posts-depl.yaml
#Going to create a deployment for the posts service
#This handles multiple replicas of the posts service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl #Name of the deployment
spec:
  replicas: 1 #Number of replicas of the posts service pods

  #selector is used to select the pods that are managed by this deployment
  #It tells find the pods with the label app: posts and manage them

  selector:
    matchLabels:
      app: posts #Label to match the pods with the deployment
  
  #Specifis the pod template that will be used to create the pods
  #Applies configurations to the pods created by this deployment
  template:
    metadata:
      labels:
        app: posts #Label to be applied to the pods

    #Includes the information about the container to be used in the pod
    spec: 
      containers:
        - name: posts #Name of the container
          image: dulina786/posts:latest #Image to be used for the container
                 #dulina786/posts also fetch the latest image from docker hub
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv #Name of the service
spec:
  selector:
    app: posts #Label to match the pods with the service
  type: ClusterIP #Type of the service(Default type if not specified)
  ports:
    - name: posts #Name of the port
      protocol: TCP #Protocol to be used for the service
      port: 4000 #This is the port of the service
      targetPort: 4000 #This is the port on the pod that the ClusterIP service will forward traffic to
      #405 is the port on which the posts service is running
      #Incoming traffic to this port will be forwarded to the posts service
