infra/k8s/query-depl.yaml
#Going to create a deployment for the query service
#This handles multiple replicas of the query service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl #Name of the deployment
spec:
  replicas: 1 #Number of replicas of the query service pods

  #selector is used to select the pods that are managed by this deployment
  #It tells find the pods with the label app: query and manage them

  selector:
    matchLabels:
      app: query #Label to match the pods with the deployment
  
  #Specifis the pod template that will be used to create the pods
  #Applies configurations to the pods created by this deployment
  template:
    metadata:
      labels:
        app: query #Label to be applied to the pods

    #Includes the information about the container to be used in the pod
    spec: 
      containers:
        - name: query #Name of the container
          image: dulina786/query:latest #Image to be used for the container
                 #dulina786/query also fetch the latest image from docker hub
---
#Going to create a Cluster IP service for the querymicroservice
#This service will be used to access the query service from inside the cluster
#This service will be used to access the query service from other microservices
apiVersion: v1
kind: Service
metadata:
  name: query-srv #Name of the service
spec:
  selector:
    app: query #Label to match the pods with the service
  type: ClusterIP #Type of the service(Default type if not specified)
  ports:
    - name: query #Name of the port
      protocol: TCP #Protocol to be used for the service
      port: 4002 #This is the port of the service
      targetPort: 4002 #This is the port on the pod that the ClusterIP service will forward traffic to
      #4002 is the port on which the query service is running
      #Incoming traffic to this port will be forwarded to the query service
